# Superscalar

./: .gitignore  .gitmodules  Makefile  README.md  shell.nix  ulx3s.lpf
csdr/: Makefile
csdr/src/: backman.c  backman.h  codec.c  codec.h  fft.c  fft.h  fixed.c  fixed.h  frontend.c  frontend.h  init.s  linker.ld  main.c  malloc.c  printf.c  stdlib.c  stdlib.h  wave.txt
doc/: Makefile  gen_llc_graph.typ  gen_pipeline_graph.typ
elf_to_hex/: Makefile  elf_to_hex.c
rust/: Cargo.toml  Makefile  firmware.asm  riscv32ima-unknown-none-elf.json  rustfmt.toml  shell.nix
rust/.cargo/: config.toml
rust/src/: bench.S  constant.rs  fixed.rs  handler.rs  hole.rs  init.s  kalloc.rs  linked_list_allocator.rs  linker.ld  main.rs  mutex.rs  palloc.rs  params.rs  pointer.rs  printer.rs  process.rs  screen.rs  trampoline.s  trap.rs  vm.rs
sdr/: Cargo.toml  Makefile  riscv32ima-unknown-none-elf.json
sdr/.cargo/: config.toml
sdr/src/: init.s  main.rs  params.rs  printer.rs
soft/: build.zig
src/: ALU.bsv  BranchPred.bsv  CC_LLC.bsv  CSR.bsv  Cache.bsv  CachePipe.bsv  CheckMemSys.bsv  ControlFlow.bsv  Core.bsv  Decode.bsv  Fetch.bsv  Fifo.bsv  IssueQueue.bsv  LDPC.bsv  LLC.bsv  LSU.bsv  MicroOp.bsv  MulDiv.bsv  MultiFifo.bsv  Pipeline.bsv  ReedSolomonGF.bsv  RvAlu.bsv  RvBranchPred.bsv  RvCSR.bsv  RvCore.bsv  RvDCache.bsv  RvDCacheCC.bsv  RvExec.bsv  RvFetch.bsv  RvICache.bsv  RvInstr.bsv  RvSystem.bsv  Soc.bsv  TL.defines  TLBram.bsv  TLTypes.bsv  TLUtils.bsv  TLXBar.bsv  UART.bsv  Utils.bsv  (+2 more)
testbench/: BlueCheck.bsv  CheckMemSys.bsv  consistency_checker.c
(+12 files in other folders)
