[package]
name = "SuperOS"
version = "0.1.0"
edition = "2021"
authors = ["Rémy Citérin"]
license-file = "LICENSE"
readme = "README.md"

[dependencies]
bitflags = "2.0.2"
riscv = "0.10.1"
# xmas-elf = "0.9.0"
# linked_list_allocator = "0.10.5"
# lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
